[package]
name = "chronosphere"
version = "0.1.0"
edition = "2024"
description = "Vim-flavored TUI for browsing, templating, and firing pentest commands from a per-engagement project directory."

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
nucleo-matcher = "0.3"
walkdir = "2"
which = "6"
shell-words = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-textarea = "0.7"
notify = "6"
base64 = "0.22"
rand = "0.8"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
